[package]
name = "gh-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive", "env"] }
color-eyre = "0.6.2"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.178", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = { version = "1.0.104", features = ["arbitrary_precision"] }
tl = "0.7.7"
